--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -12,32 +12,32 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <li class="nav-item">
+      <li ng-if="! ctrl.loggedIn" class="nav-item">
         <a href="#" class="nav-link">
-          <span ng-if="! ctrl.loggedIn"
+          <span 
             ng-click="ctrl.showSignup = ! ctrl.showSignup; ctrl.showLogin = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
             Sign Up
           </span>
         </a>
       </li>
-      <li class="nav-item">
+      <li ng-if="! ctrl.loggedIn" class="nav-item">
         <a href="#" class="nav-link">
-          <span ng-if="! ctrl.loggedIn"
+          <span 
             ng-click="ctrl.showLogin = ! ctrl.showLogin; ctrl.showSignup = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
             Login
           </span>
         </a>
       </li>
-      <li class="nav-item">
+      <li ng-show="ctrl.loggedIn" class="nav-item">
         <a href="#" class="nav-link">
-          <span ng-show="ctrl.loggedIn" ng-click="ctrl.getViewUser(ctrl.loggedInUser._id); ctrl.changeInclude('user-profile')">
+          <span  ng-click="ctrl.getViewUser(ctrl.loggedInUser._id); ctrl.changeInclude('user-profile')">
             Profile
           </span>
         </a>
       </li>
-      <li class="nav-item">
+      <li ng-show="ctrl.loggedIn" class="nav-item">
         <a href="#" class="nav-link">
-          <span ng-show="ctrl.loggedIn" ng-click="ctrl.logOut()">
+          <span ng-click="ctrl.logOut()">
             Logout
           </span>
         </a>
@@ -47,6 +47,6 @@
       {{ctrl.loggedInUser.username}}</span>
     <form ng-submit="ctrl.changeInclude('main-page'); ctrl.changeFilter('search')" class="form-inline my-2 my-md-0">
       <input type="text" class="form-control" ng-model="ctrl.searchText" placeholder="search">
-      <input class="btn btn-light mx-3" type="submit" value="Search">
+      <input class="btn btn-light mx-3 my-2" type="submit" value="Search">
 
   </div>
