--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="container thread-view">
         <h3 class="blue">{{ctrl.viewThread.title}}</h3>
-        By <a href="#">{{ctrl.viewThread.username ? ctrl.viewThread.username : 'unknown' }}</a>
+        By <a href="#" ng-click="ctrl.showUserProfile(ctrl.viewThread.userRef)">{{ctrl.viewThread.username ? ctrl.viewThread.username : 'unknown' }}</a>
         <p class="display-newlines" ng-if="!ctrl.showThreadUpdateFields">{{ctrl.viewThread.content}}</p>
         <br>
         <textarea ng-if="ctrl.showThreadUpdateFields" type="text" cols="70" rows="10" ng-model="ctrl.updatingThread.content"> </textarea>
@@ -54,5 +54,5 @@
             <br/><input ng-click="ctrl.showAddComment = false" type="submit" value="Submit Comment" class="btn-success">
         </form>
     </div>
-    <div id="goBack" ng-click="ctrl.showAddComment = false; ctrl.showThreadUpdateFields = false; ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary">Go Back</div>
+    <div id="goBack" ng-click="ctrl.showAddComment = false; ctrl.showThreadUpdateFields = false; ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary my-3">Go Back</div>
 </div>
