--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -1,52 +1,54 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a href="#" class="navbar-brand">FORUM</a>
-  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarsExample04"
-    aria-controls="navbarsExample04" aria-expanded="false" aria-lable="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarsExample04">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a href="#" class="nav-link" ng-click="ctrl.changeInclude('main-page')">
-          Home
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li ng-if="! ctrl.loggedIn" class="nav-item">
-        <a href="#" class="nav-link">
-          <span 
-            ng-click="ctrl.showSignup = ! ctrl.showSignup; ctrl.showLogin = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
-            Sign Up
-          </span>
-        </a>
-      </li>
-      <li ng-if="! ctrl.loggedIn" class="nav-item">
-        <a href="#" class="nav-link">
-          <span 
-            ng-click="ctrl.showLogin = ! ctrl.showLogin; ctrl.showSignup = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
-            Login
-          </span>
-        </a>
-      </li>
-      <li ng-show="ctrl.loggedIn" class="nav-item">
-        <a href="#" class="nav-link">
-          <span  ng-click="ctrl.getViewUser(ctrl.loggedInUser._id); ctrl.changeInclude('user-profile')">
-            Profile
-          </span>
-        </a>
-      </li>
-      <li ng-show="ctrl.loggedIn" class="nav-item">
-        <a href="#" class="nav-link">
-          <span ng-click="ctrl.logOut()">
-            Logout
-          </span>
-        </a>
-      </li>
-    </ul>
-    <span ng-show="ctrl.loggedInUser.username" style="color: white; padding-right: 3em;" class="">Welcome,
-      {{ctrl.loggedInUser.username}}</span>
-    <form ng-submit="ctrl.changeInclude('main-page'); ctrl.changeFilter('search')" class="form-inline my-2 my-md-0">
-      <input type="text" class="form-control" ng-model="ctrl.searchText" placeholder="search">
-      <input class="btn btn-light mx-3 my-2" type="submit" value="Search">
-
+  <div class="container">
+    <a href="#" class="navbar-brand">FORUM</a>
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarsExample04"
+      aria-controls="navbarsExample04" aria-expanded="false" aria-lable="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a href="#" class="nav-link" ng-click="ctrl.changeInclude('main-page')">
+            Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li ng-if="! ctrl.loggedIn" class="nav-item">
+          <a href="#" class="nav-link">
+            <span 
+              ng-click="ctrl.showSignup = ! ctrl.showSignup; ctrl.showLogin = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
+              Sign Up
+            </span>
+          </a>
+        </li>
+        <li ng-if="! ctrl.loggedIn" class="nav-item">
+          <a href="#" class="nav-link">
+            <span 
+              ng-click="ctrl.showLogin = ! ctrl.showLogin; ctrl.showSignup = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
+              Login
+            </span>
+          </a>
+        </li>
+        <li ng-show="ctrl.loggedIn" class="nav-item">
+          <a href="#" class="nav-link">
+            <span  ng-click="ctrl.getViewUser(ctrl.loggedInUser._id); ctrl.changeInclude('user-profile')">
+              Profile
+            </span>
+          </a>
+        </li>
+        <li ng-show="ctrl.loggedIn" class="nav-item">
+          <a href="#" class="nav-link">
+            <span ng-click="ctrl.logOut()">
+              Logout
+            </span>
+          </a>
+        </li>
+      </ul>
+      <span ng-show="ctrl.loggedInUser.username" style="color: white; padding-right: 3em;" class="">Welcome,
+        {{ctrl.loggedInUser.username}}</span>
+      <form ng-submit="ctrl.changeInclude('main-page'); ctrl.changeFilter('search')" class="form-inline my-2 my-md-0">
+        <input type="text" class="form-control" ng-model="ctrl.searchText" placeholder="search">
+        <input class="btn btn-light mx-3 my-2" type="submit" value="Search">
+    </div>
   </div>
+</nav>
