--- a/public/css/main-page.css
+++ b/public/css/main-page.css
@@ -4,11 +4,12 @@
 
 
 /* Thread Table Formatting */
-.thread-list-title {
-    display: inline;
+.thread-list-title .thread-list-date{
+    display: block;
 }
+
 .thread-list-user {
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 
 .dropdown-menu {
@@ -18,8 +19,8 @@
 
 /* Avatar image */
 .thread-avatar-container {
-    width: 10vh;
-    height: 10vh;
+    width: 10vw;
+    height: 10vw;
     border-radius: 50%;
     overflow: hidden;
     display: flex;
@@ -31,4 +32,22 @@
     height: 100%;
     width: auto;
     border-radius: 50%;
+}
+
+@media screen and (min-width: 940px) {
+    .thread-avatar-container {
+        width: 10vh;
+        height: 10vh;
+        border-radius: 50%;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .thread-list-title .thread-list-date {
+        display: inline;
+    }
+    .thread-list-user {
+        margin-left: 20px;
+    }
 }
